--- a/appoint-server/src/main/resources/application.properties
+++ b/appoint-server/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1
 spring.jpa.generate-ddl=true
-
+server.port=8080
 # App Properties
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
