--- a/appoint-server/src/main/resources/application.properties
+++ b/appoint-server/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 server.port=8080
+spring.jpa.show-sql=true
 # App Properties
 grokonez.app.jwtSecret=jwtGrokonezSecretKey
 grokonez.app.jwtExpiration=86400
