--- a/appoint-web/src/main/web/package.json
+++ b/appoint-web/src/main/web/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
     "core-js": "^2.5.4",
+    "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
     "primeng": "^7.1.3",
     "rxjs": "^6.0.0",
