--- a/appoint-web/src/main/web/package.json
+++ b/appoint-web/src/main/web/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "primeflex": "^1.0.0-rc.1",
     "primeicons": "^1.0.0",
