--- a/appoint-server/src/main/resources/application.properties
+++ b/appoint-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+#spring.datasource.url=jdbc:mysql://localhost:3306/yasasxdb_testdb?useSSL=false
+#spring.datasource.username=yasasxdb_app	
+#spring.datasource.password=FTP_yasa_2019
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
