--- a/appoint-web/src/main/web/package.json
+++ b/appoint-web/src/main/web/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^7.2.15",
     "@angular/platform-browser-dynamic": "^7.2.15",
     "@angular/router": "^7.2.15",
+    "@kolkov/angular-editor": "^0.17.1",
     "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
     "primeflex": "^1.0.0-rc.1",
